Fixed: Alignement of author card to be centered

--- a/site-sass/site-specific/site.archive.scss
+++ b/site-sass/site-specific/site.archive.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   height: 600px;
-  max-width: 1200px;
+  max-width: 1220px;
   margin: 0 auto;
   margin-bottom: 20px;
 
@@ -12,10 +12,15 @@
     height: auto;
   }
 
-  div {
+  .align-author-card {
+    margin: auto;
+  }
+
+  .column-spacings {
     padding: 0;
     width: 33.3333%;
-    padding: 0 30px;
+    padding-right: 30px;
+    display: flex;
     @include mq($until:desktop) {
       margin-top: 20px;
       padding: 0 30px;
